project/tests/rsl_test_cases/fail/BOOLEAN_SUBTYPE.rsl
scheme BOOLEAN_SUBTYPE_NEGATIVE =
  class
    type
      TruthValue = {| v : Bool :- v = true |}
    value
      alwaysTrue : Bool -> TruthValue
      alwaysTrue(x) is x
  end
